[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ur_audio_sub"
description = "A Python package that helps capture news updates from top Vietnamese news sites"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
                "urllib3",
                "beautifulsoup4"
                ]